--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -19,8 +19,8 @@
 				<li id="light-mode" class="la la-moon view-mode" title="Light theme"></li>
 			</ul>                        
 		  <div class="menu-icon" id="menu-icon">
-			  <i class="las la-bars menu-icon"></i>
-			  <i class="las la-times menu-icon inactive"></i>
+			  <i id="menu-closed" class="las la-bars menu-icon"></i>
+			  <i id="menu-open" class="las la-times menu-icon inactive"></i>
 		  </div>
 		</nav>
 	</div>
