--- a/assets/sass/_partial/_pub.scss
+++ b/assets/sass/_partial/_pub.scss
@@ -112,11 +112,13 @@
 			.vrtx-hinn-links {
 				list-style-type: none;
 				display: inline;
+				margin: 0 auto;
+				padding: 0;
 			}
 
 			.vrtx-hinn-links li {
 				display: inline;
-				margin: 10px;
+				margin-right: 10px;
 			}
 		}
 
