--- a/assets/sass/_utils/_utils.scss
+++ b/assets/sass/_utils/_utils.scss
@@ -1,5 +1,19 @@
 @use "_custom/custom" as *;
 @use "_variables" as *;
+
+
+@mixin stroke($color: #000, $size: 1px) {
+  text-shadow:
+    -#{$size} -#{$size} 0 $color,
+     0        -#{$size} 0 $color,
+     #{$size} -#{$size} 0 $color,
+     #{$size}  0        0 $color,
+     #{$size}  #{$size} 0 $color,
+     0         #{$size} 0 $color,
+    -#{$size}  #{$size} 0 $color,
+    -#{$size}  0        0 $color;
+}
+
 @mixin clearfix() {
   &:before,
   &:after {
