--- a/assets/sass/_partial/_archive.scss
+++ b/assets/sass/_partial/_archive.scss
@@ -6,6 +6,7 @@
 
   #archive {
     min-height: calc(100vh - 80px); 
+    max-width: 1000px;
     padding: 20px;
     overflow-y: hidden;
     animation: fadeIn 1 1s ease-out;
@@ -17,8 +18,8 @@
   #archive article {
     background-color: $global-background;
     color: $global-font-color;
-    border: 1px solid #000; /* Add a border around the page */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Add a subtle shadow effect */
+    border: 1px solid #000;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     padding: 1cm;
   }
 
