--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -44,6 +44,11 @@ a {
   text-decoration: none;
 }
 
+.include {
+  margin: 0;
+  padding: 0;
+}
+
 @each $header, $size in $global-headings {
   #{$header} {
     font-size: $size;
