--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,4 +4,6 @@
 @use '_partial/_overview' as *;
 @use '_partial/_archive' as *;
 @use '_partial/_pub' as *;
+@use '_partial/_stats' as *;
 @use '_partial/_footer' as *;
+@use '_partial/_tree' as *;
