--- a/assets/sass/_partial/_header.scss
+++ b/assets/sass/_partial/_header.scss
@@ -1,5 +1,52 @@
 @use '_utils/_serve' as *;
 
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-button {
+  cursor: pointer;
+}
+
+.dropdown-content {
+  background: $global-background;
+  position: fixed;
+  width: 100%;
+  min-height: 100vh;
+  top: 80px;
+  left: 0;
+  z-index: 1;
+  margin: 0 auto;
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 0.3s ease, visibility 0.3s ease;
+}
+
+.dropdown-content section {
+  width: 100%;
+  margin: 0 auto;
+}
+
+.dropdown-content.show {
+  opacity: 1;
+  visibility: visible;
+}
+
+.dropdown-content a {
+display: inline;
+margin: 10px
+}
+
+@media screen and (max-width: 768px) {
+  .dropdown-content {
+    position: relative;
+    top : 0;
+    min-height: 0;
+  }
+}
+
 header {
   height: 80px;
   position: fixed;
@@ -19,6 +66,10 @@ header {
     align-items: center;
   }
 
+  .navbar li {
+    cursor: pointer;
+  }
+
   #logo {
     display: block;
     float: left;
@@ -35,38 +86,40 @@ header {
   }
 
   .menu {
+    
     list-style: none;
     display: flex;
     padding: 0;
     margin: 0;
     width: 100%;
     justify-content: right;
-  }
 
-  .menu li {
-    margin: 0 20px 0 0;
-    padding: 0;
-  }
+    li {
+      margin: 0 20px 0 0;
+      padding: 0;
+    }
+  
+    a, li {
+      text-decoration: none;
+      color: $global-font-color;
+      transition: color 0.3s;
+    }
+  
+    a:hover, li:hover {
+      color: $global-flashy;
+    }
+  
+    .view-mode {
+      font-size: 24px;
+      cursor: pointer;
+      margin-right: 10px;
+      display: block;
+    }
 
-  .menu a, .menu li {
-    text-decoration: none;
-    color: $global-font-color;
-    transition: color 0.3s;
-  }
-
-  .menu a:hover, .menu li:hover {
-    color: $global-flashy;
   }
 
   .menu-icon {
     display: none;
-  }
-
-  .view-mode {
-    font-size: 24px;
-    cursor: pointer;
-    margin-right: 10px;
-    display: block;
   }
 
   @media screen and (max-width: 768px) {
